add feed to home page for subscription

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ layout: default
     </ul>
     <h4>About Edward Hyde</h4>
     <p>A night owl, citizen of London, of questionable character.</p>
+		<p><a href="/feed.xml">Subscribe to Feed</a></p>
   </div>
 
 </div>
