modify the config of site.baseurl for github project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
   <div class="eight columns">
     {% for post in site.posts limit: 3 %}
-    <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+		<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 
     <div class="row">
       <div class="twelve columns">
@@ -21,7 +21,7 @@ layout: default
     <p>From the archives of this journal:</p>
     <ul class="disc">
       {% for post in site.posts offset: 3 limit: 10 %}
-        <li><a href="{{ post.url }} ">{{ post.title }}</a></li>
+			<li><a href="{{ site.baseurl }}{{ post.url }} ">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
     <h4>About Edward Hyde</h4>
